# rag-workshop-from-scratch

./: BACKLOG.md  README.md  pyproject.toml  schema.sql
rag_demo/: __main__.py
