[tool.poetry]
name = "rag-workshop-from-scratch"
version = "0.1.0"
description = ""
authors = ["Bob Remeika <bob@ragie.ai>", "Sergio M. Ferro <Sergio_Ferro@epam.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.0.1"
transformers = "^4.29.2"
psycopg = "^3.2.3"
isort = "^5.13.2"
pypdf2 = "^3.0.1"
einops = "^0.8.0"
datasets = "^3.2.0"
python-dotenv = "^1.0.1"
huggingface-hub = "^0.27.1"
psycopg-binary = "^3.2.9"
langchain-text-splitters = "^0.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
